updates new blogs

--- a/src/styles/base/mixins.scss
+++ b/src/styles/base/mixins.scss
@@ -8,6 +8,12 @@
   }
 }
 
+@mixin small-breakpoint-max {
+  @media (max-width: #{$mobile}) {
+    @content;
+  }
+}
+
 @mixin medium-breakpoint {
   @media (min-width: #{$tablet}) {
     @content;
