--- a/src/styles/components/navigation.scss
+++ b/src/styles/components/navigation.scss
@@ -19,12 +19,12 @@
 
   .nav-container {
     padding: 0 1.5rem;
+    box-shadow: 0 5px 20px -10px #000;
     height: 55px;
-    max-width: $width;
     margin: auto;
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     transition: height 0.3s ease;
   }
 
@@ -111,7 +111,6 @@ button.dark-switcher {
     }
 
     .nav-container {
-      height: 160px;
       padding: 0 2rem;
     }
 
