sample page added on blog screen

--- a/src/styles/components/layout.scss
+++ b/src/styles/components/layout.scss
@@ -10,6 +10,65 @@
     min-height: calc(100vh - 219px);
   }
 }
+.instruction-manuals {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 0 -1rem;
+  > a {
+    z-index: 2;
+    transition: all 0.2s ease;
+    display: block;
+    padding: 1rem 1.5rem;
+    background: white;
+    border-radius: $border-radius;
+    box-shadow: 0.2rem 0.25rem 0.75rem 0 rgba(0, 0, 0, 0.1);
+    margin: 0.5rem;
+    &:hover {
+      transform: translateY(-1px);
+      box-shadow: 0.5rem 1.25rem 2rem 0 rgba(0, 0, 0, 0.2);
+    }
+    img {
+      display: block;
+      margin: auto;
+      max-width: 50px;
+      max-height: 50px;
+    }
+    h3 {
+      margin: 0.5rem auto 0;
+      text-align: center;
+      font-size: 1.1rem;
+    }
+  }
+
+  @include small-breakpoint {
+    > a {
+      img {
+        max-width: 75px;
+        max-height: 75px;
+      }
+      h3 {
+        font-size: 1.3rem;
+      }
+    }
+  }
+}
+
+.gradient-section {
+  border-top: 1px solid #ddd;
+  border-bottom: 1px solid #ddd;
+  padding: 4rem 0;
+  background: radial-gradient(circle at 20% 20%, #5183f5 25%, #4640ff 100%);
+
+  h2 {
+    color: white;
+  }
+
+  &.articles {
+    margin-bottom: 30px;
+    margin-top: -60px;
+  }
+}
 
 .container {
   max-width: $width;
