--- a/src/styles/themes/dark.scss
+++ b/src/styles/themes/dark.scss
@@ -7,6 +7,13 @@ $dark-border: darken($background, 3%);
   background: $background;
   color: $foreground;
 
+  .instruction-manuals > a {
+    background: #2a2a2a;
+    &:hover {
+      box-shadow: 0.5rem 1.25rem 2rem 0 rgba(255, 249, 249, 0.2);
+    }
+  }
+
   a {
     color: lighten($primary-color, 10%);
 
@@ -283,6 +290,10 @@ $dark-border: darken($background, 3%);
     }
   }
 
+  .gradient-section {
+    border-color: transparent;
+    background: transparent;	  
+  }	
   cite {
     color: rgba(255, 255, 255, 0.4);
   }
