making bootcamp image light/

--- a/src/styles/components/layout.scss
+++ b/src/styles/components/layout.scss
@@ -85,6 +85,11 @@
   }
 }
 
+.bootcamp-card {
+  background-color: #f4f4f4;
+  padding: 15px !important;
+  box-shadow: 0 5px 20px -10px #000;
+}
 .container {
   max-width: $width;
   padding: 0 1.5rem;
