publication and bootcamp page updated

--- a/src/styles/components/layout.scss
+++ b/src/styles/components/layout.scss
@@ -110,21 +110,18 @@
   margin-bottom: 10px;
   position: relative;
   margin: 0px;
-  padding: 0px;
-  border-bottom: 1px solid #ccc;
+  padding: 10px;
 
   &::before {
     content: '';
   }
-
   &:hover {
     border-bottom: 1px solid transparent;
     box-shadow: 0 3px 15px rgba(0, 0, 0, .2);
   }
-
   &__content {
+    text-align: center;
     flex: 1 1;
-    margin: 20px;
 
     &__description {
       font-size: 1rem;
@@ -132,11 +129,12 @@
       margin: 0;
     }
   }
+  &__items {
+    text-align: center;
+  }
 
   &__img {
-
-    width: 280px;
-    height: 180px;
+    width: 80%;
     margin: 20px;
   }
 
