site config updated with fix import

--- a/src/styles/components/layout.scss
+++ b/src/styles/components/layout.scss
@@ -94,8 +94,11 @@
   }
 
   &.articles {
+    background-size: cover;
     margin-bottom: 30px;
+    background-position: center;
     margin-top: -60px;
+    background-repeat: no-repeat;
   }
 }
 
