--- a/src/styles/components/layout.scss
+++ b/src/styles/components/layout.scss
@@ -146,6 +146,7 @@
   position: relative;
   margin: 0px;
   padding: 10px;
+  flex-basis: 33%;
 
   &::before {
     content: '';
@@ -179,6 +180,7 @@
   .youtube {
     flex-direction: column;
     margin-bottom: 10px;
+    flex-basis: 100%;
 
     &:hover {
       border-bottom: 1px solid transparent;
