--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -12,6 +12,7 @@
 
 // Components
 @import 'components/scaffolding';
+@import 'components/utube';
 @import 'components/helpers';
 @import 'components/buttons';
 @import 'components/forms';
